# accelio

./: CMakeLists.txt  configure.ac
examples/usr/: CMakeLists.txt
examples/usr/hello_world/: CMakeLists.txt  xio_server.c
examples/usr/hello_world1/: CMakeLists.txt  Makefile.in  xio_client.c  xio_server.c
examples/usr/hello_world_mt/: CMakeLists.txt  Makefile.am  xio_mt_client.c  xio_mt_server.c
examples/usr/hello_world_mt1/: CMakeLists.txt  xio_mt_client.c  xio_mt_server.c
examples/usr/raio/: CMakeLists.txt  Makefile.am  raio_handlers.c
include/: CMakeLists.txt  xio_kernel.h  xio_user.h
regression/usr/reg_basic_mt/: Makefile.am
src/common/: xio_common.h  xio_server.c  xio_session.c  xio_utils.c
src/usr/: CMakeLists.txt  Makefile.am  libxio.map  xio_init.c  xio_mem.c
src/usr/linux/: kernel.h
src/usr/rdma/: xio_rdma_mempool.c  xio_rdma_mempool.h
tests/usr/: CMakeLists.txt
tests/usr/hello_test/: CMakeLists.txt  xio_client.c  xio_server.c
tests/usr/hello_test_bidi/: CMakeLists.txt
tests/usr/hello_test_lat/: CMakeLists.txt
tests/usr/hello_test_mt/: CMakeLists.txt
tests/usr/hello_test_oneway/: CMakeLists.txt
